# eeing

./: Cargo.toml  README.md
linux/: config.toml  eeing.json  install.sh
src/: config_parser.rs  engine.rs  io.rs  listener.rs  main.rs
windows/: config.toml  eeing.json  install.bat
