[package]
name = "eeing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shakmaty = "0.22.0"
tokio = { version = "1.21.2", features = ["rt", "sync", "macros", "io-std", "io-util", "process", "signal"] }
