[package]
name = "eeing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
shakmaty = "0.22.0"
byteorder = "1.4.3"
toml = "0.5.10"
derive_more = "0.99.17"

[profile.release]
strip = true
lto = true
codegen-units = 1
